syntax = "proto3";

package obs_remote.v5.virtual_cam;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service VirtualCam {
  // Gets the status of the virtualcam output.
  //
  // Original: GetVirtualCamStatus
  rpc Status(google.protobuf.Empty) returns (google.protobuf.BoolValue);
  // Toggles the state of the virtualcam output.
  //
  // Original: ToggleVirtualCam
  rpc Toggle(google.protobuf.Empty) returns (google.protobuf.BoolValue);
  // Starts the virtualcam output.
  //
  // Original: StartVirtualCam
  rpc Start(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Stops the virtualcam output.
  //
  // Original: StopVirtualCam
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);
}
