syntax = "proto3";

package virtual_cam.v1;

service VirtualCamService {
  // Gets the status of the virtualcam output.
  rpc Status(StatusRequest) returns (StatusResponse);
  // Toggles the state of the virtualcam output.
  rpc Toggle(ToggleRequest) returns (ToggleResponse);
  // Starts the virtualcam output.
  rpc Start(StartRequest) returns (StartResponse);
  // Stops the virtualcam output.
  rpc Stop(StopRequest) returns (StopResponse);
}

message StatusRequest {}

message StatusResponse {
  bool active = 1;
}

message ToggleRequest {}

message ToggleResponse {
  bool active = 1;
}

message StartRequest {}

message StartResponse {}

message StopRequest {}

message StopResponse {}
